src/main/default/objects/narrate_ExecutionContext__c/narrate_ExecutionContext__c.object-meta.xml
<CustomObject>
    <label>Log</label>
    <nameField>
        <label>Log Context</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>