src/main/default/objects/narrate_ExecutionContext__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>LPAD(
    TEXT(
        MOD(
            HOUR(TIMEVALUE(EndTime__c)) - HOUR(TIMEVALUE(StartTime__c)), 
            24  
        )
    ),
    2,
    &#39;0&#39;
)
&amp; &#39;:&#39; &amp;
LPAD(
    TEXT(
        MOD(
            MINUTE(TIMEVALUE(EndTime__c)) - MINUTE(TIMEVALUE(StartTime__c)), 
            60
        )
    ),
    2,
    &#39;0&#39;
)
&amp; &#39;:&#39; &amp;
LPAD(
    TEXT(
        MOD(
            SECOND(TIMEVALUE(EndTime__c)) - SECOND(TIMEVALUE(StartTime__c)), 
            60  
        )
    ),
    2,
    &#39;0&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>