src/main/default/objects/narrate_ExecutionContext__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>End Time</label>
    <summarizedField>narrate_LogEntry__c.Timestamp__c</summarizedField>
    <summaryForeignKey>narrate_LogEntry__c.ExecutionContext__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>