src/main/default/objects/narrate_ExecutionContext__c/fields/narrate_EndTime__c.field-meta.xml
<CustomField>
    <fullName>narrate_EndTime__c</fullName>
    <label>End Time</label>
    <summarizedField>narrate_LogEntry__c.narrate_Timestamp__c</summarizedField>
    <summaryForeignKey>narrate_LogEntry__c.narrate_ExecutionContext__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>