src/main/default/objects/narrate_ExecutionContext__c/fields/NumberOfEntries__c.field-meta.xml
<CustomField>
    <fullName>NumberOfEntries__c</fullName>
    <label>Number of Entries</label>
    <summaryForeignKey>narrate_LogEntry__c.ExecutionContext__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>