src/main/default/objects/narrate_ExecutionContext__c/fields/Quiddity__c.field-meta.xml
<CustomField>
    <fullName>Quiddity__c</fullName>
    <label>Quiddity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>