src/main/default/objects/narrate_ExecutionContext__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>Start Time</label>
    <summarizedField>narrate_LogEntry__c.CreatedDate</summarizedField>
    <summaryForeignKey>narrate_LogEntry__c.ExecutionContext__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>